crates/zizmor/tests/integration/snapshots/integration__e2e__invalid_config_file.snap
---
source: crates/zizmor/tests/integration/e2e.rs
expression: "zizmor().expects_failure(true).config(if cfg!(windows) { \"NUL\" } else\n{ \"/dev/null\" }).input(input_under_test(\"e2e-menagerie\")).run()?"
---
fatal: no audit was performed
configuration error in @@CONFIG@@

Caused by:
    0: invalid configuration syntax
    1: missing field `rules`
