crates/zizmor/tests/integration/snapshots/integration__e2e__invalid_input_not_strict.snap
---
source: crates/zizmor/tests/integration/e2e.rs
expression: "zizmor().expects_failure(3).input(input_under_test(&format!(\"invalid/{tc}.yml\"))).run()?"
---
 INFO zizmor: 🌈 zizmor v@@VERSION@@
 WARN collect_inputs: zizmor_collect: failed to validate file://@@INPUT@@ as workflow: input does not match expected validation schema
fatal: no audit was performed
error: no inputs collected
  |
  = help: collection yielded no auditable inputs
  = help: at least one valid, auditable input must be given

Caused by:
    no inputs collected
