crates/zizmor/tests/integration/snapshots/integration__e2e__invalid_inputs-3.snap
---
source: crates/zizmor/tests/integration/e2e.rs
expression: "zizmor().expects_failure(true).input(input_under_test(&format!(\"invalid/{workflow_tc}.yml\"))).args([\"--strict-collection\"]).run()?"
---
fatal: no audit was performed
failed to load input as Workflow

Caused by:
    0: input does not match expected validation schema
    1: null is not of type "object"
