crates/zizmor/tests/integration/snapshots/integration__e2e__invalid_inputs-5.snap
---
source: crates/zizmor/tests/integration/e2e.rs
expression: "zizmor().expects_failure(1).input(input_under_test(&format!(\"invalid/{workflow_tc}.yml\"))).args([\"--strict-collection\"]).run()?"
---
 INFO zizmor: 🌈 zizmor v@@VERSION@@
fatal: no audit was performed
failed to load file://@@INPUT@@ as workflow

Caused by:
    0: invalid YAML syntax: mapping values are not allowed in this context at line 3 column 8
    1: mapping values are not allowed in this context at line 3 column 8
