crates/zizmor/tests/integration/snapshots/integration__e2e__invalid_inputs-8.snap
---
source: crates/zizmor/tests/integration/e2e.rs
expression: "zizmor().expects_failure(1).input(input_under_test(&format!(\"invalid/{workflow_tc}.yml\"))).args([\"--strict-collection\"]).run()?"
---
 INFO zizmor: 🌈 zizmor v@@VERSION@@
fatal: no audit was performed
failed to load file://@@INPUT@@ as action

Caused by:
    0: input does not match expected validation schema
    1: "description" is a required property
       runs: "using" is a required property
       runs: "main" is a required property
       runs: Additional properties are not allowed ('image' was unexpected)
       runs: "using" is a required property
       runs: "steps" is a required property
       runs: Additional properties are not allowed ('image' was unexpected)
       runs: "using" is a required property
       outputs.some-output: "value" is a required property
