crates/zizmor/tests/integration/snapshots/integration__e2e__issue_1116_strict_collection_remote_input-2.snap
---
source: crates/zizmor/tests/integration/e2e.rs
expression: "zizmor().offline(NetworkMode::AssertOnline).output(OutputMode::Stderr).input(\"woodruffw-experiments/zizmor-issue-1116@f41c414\").run()?"
---
 INFO zizmor: 🌈 zizmor v@@VERSION@@
 WARN collect_inputs:collect_from_repo_slug{slug=InputSlug { owner: "woodruffw-experiments", repo: "zizmor-issue-1116", git_ref: Some("f41c414") }}: zizmor_collect: failed to validate https://github.com/woodruffw-experiments/zizmor-issue-1116/blob/f41c414/invalid-action/action.yml as action: input does not match expected validation schema
 INFO collect_inputs:collect_from_repo_slug{slug=InputSlug { owner: "woodruffw-experiments", repo: "zizmor-issue-1116", git_ref: Some("f41c414") }}: zizmor_collect: collected 1 inputs from woodruffw-experiments/zizmor-issue-1116
 INFO audit: zizmor: 🌈 completed .github/workflows/hackme.yml
