crates/zizmor/tests/integration/snapshots/integration__e2e__issue_1207.snap
---
source: crates/zizmor/tests/integration/e2e.rs
expression: "zizmor().output(OutputMode::Both).working_dir(input_under_test(\"e2e-menagerie/dummy-action-1\")).input(\"action.yaml\").run()?"
---
 INFO zizmor: 🌈 zizmor v@@VERSION@@
 WARN audit: zizmor: zizmor is running in offline mode by default; some audits and auto-fixes will not be available. see https://docs.zizmor.sh/usage/#operating-modes for details
 INFO audit: zizmor: 🌈 completed @@INPUT@@
No findings to report. Good job!
