crates/zizmor/tests/integration/snapshots/integration__e2e__issue_1341.snap
---
source: crates/zizmor/tests/integration/e2e.rs
expression: "zizmor().offline(true).input(input_under_test(\"issue-1341-repro/.github/workflows/dependabot.yml\")).run()?"
---
No findings to report. Good job! (3 suppressed)
